--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,14 @@ compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
 
 repositories{
-    mavenCentral()
+	mavenCentral()
     maven{ url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }
     maven{ url 'https://www.jitpack.io' }
 }
 
 ext{
     //the build number that this plugin is made for
-    mindustryVersion = 'v145'
+    mindustryVersion = 'v146'
     jabelVersion = "93fde537c7"
 }
 
@@ -29,9 +29,16 @@ allprojects{
 }
 
 dependencies{
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.0.1'
+
+
     compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
     compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
-    annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
+    
+	compileOnly 'org.projectlombok:lombok:1.18.32'
+	
+    annotationProcessor 'org.projectlombok:lombok:1.18.32'
+	annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
 }
 
 jar{
