--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,8 @@ dependencies{
 
     compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
     compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
-    
+    compileOnly "com.github.Anuken.Mindustry:server:$mindustryVersion"
+
 	compileOnly 'org.projectlombok:lombok:1.18.32'
 	
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
