--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,6 +26,7 @@ jobs:
           draft: false
           prerelease: false
           release_name: Latest
+          tag_name: v0.0.1
         env:
           GITHUB_TOKEN: ${{ github.token }}
       - name: upload artifact
